--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li>strong</li>
         </ul>
         <p>and don't take crap off of nobody.</p>
-        <p>Click <a href="https://www.imdb.com/title/tt0106611/">here</a> to get the full story.<p>
+        <p>Click <a href="https://www.imdb.com/title/tt0106611/" title="Cool Runnings IMDB">here</a> to get the full story.<p>
         <script src="scipts/main.js"></script>
     </body>
 <html>
